# MyML

./: .clang-format  .gitmodules  CMakeLists.txt
config/: Config.cmake.in  natvis.in
include/MyML/: BBox.hxx  Basic.hxx  Euler.hxx  Line.hxx  Mat.hxx  Material.hxx  MyML  Normal.hxx  Plane.hxx  Point.hxx  Quat.hxx  Ray.hxx  Rgb.hxx  Rgba.hxx  Sample.hxx  Scale.hxx  Svec.hxx  Transform.hxx  Triangle.hxx  Val.hxx  Vec.hxx
include/MyML/Interfaces/: Arg.hxx  IAdd.hxx  IAffine.hxx  IAffineRealSubspace.hxx  IAffineSubspace.hxx  IInOut.hxx  IInnerProduct.hxx  ILine.hxx  ILinear.hxx  IMetric.hxx  IMul.hxx  INormal.hxx  IOLine.hxx  IOPlane.hxx  IPlane.hxx  IRing.hxx  IScalarMul.hxx
include/MyML/Interfaces/IArray/: IArray.hxx  IArray1D.hxx  IArray1D_Util.hxx  IArrayAdd.hxx  IArrayCast.hxx  IArrayHadamardProduct.hxx  IArrayInOut.hxx  IArrayLinear.hxx  IArrayScalarMul.hxx  IArrayUtil.hxx  ICross.hxx  IEuclideanA.hxx  IEuclideanAS.hxx  IEuclideanLine.hxx  IEuclideanV.hxx
include/MyML/Interfaces/IMatrix/: IMatrix.hxx  IMatrixInOut.hxx  IMatrixMul.hxx  IMatrixMul_detail.hxx  IMatrix_detail.hxx
include/MyML/detail/: BBox.inl  Basic.inl  Euler.inl  Line.inl  Material.inl  Normal.inl  Plane.inl  Point.inl  Quat.inl  Ray.inl  Sample.inl  Svec.inl  Transform.inl  Triangle.inl  Val.inl
src/EMPTY/: CMakeLists.txt  main.cxx
src/core/: CMakeLists.txt
src/test/00_val/: main.cxx
src/test/01_vec/: main.cxx
src/test/02_point/: main.cxx
src/test/03_mat/: main.cxx
src/test/04_rgb_scale/: main.cxx
src/test/05_quat/: main.cxx
src/test/06_transform/: main.cxx
src/test/07_bbox/: main.cxx
src/test/08_line/: main.cxx
src/test/08_ray/: CMakeLists.txt  main.cxx
src/test/09_ray/: main.cxx
src/test/10_simd/: CMakeLists.txt  main.cxx
